[tool.poetry]
name = "ray-marching"
version = "0.1.0"
description = "Distance-aided Ray Marching on C++ and Vulkan"
authors = ["Dmitry Nesterov <dim.nesterov2015@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
# conan = "^1.57.0"
# pytest = "^7.2.1"
# cpplint = "^1.6.1"
# pylint = "^2.15.10"
conan = "^2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
